# tools

./: .env.template  .gitignore  .sprite  AGENTS.md  README.md  pyproject.toml
.cursor/: mcp.json
cli/: __init__.py  calendar.py  cf_cron.py  docs.py
docs/: docs.md
mcp/: calendar-mcp.py  code-mcp.py  docs-mcp.py  git-mcp.py
projects/agent/: .dockerignore  .env.template  AGENTS.template.md  Dockerfile  bashrc  entrypoint.sh  fly.toml  hermes-config.yaml  init.sh  jobs.md  jobs.template.md  setup-guide.md  setup.sh  todos.md
projects/arc-search/: package.json  pnpm-lock.yaml  popup.html  tsconfig.json  vite.config.ts
projects/arc-search/src/: manifest.json
projects/arc-search/src/background/: browser-actions.ts  google-suggest.ts  hotkeys.ts  index.ts  search-pipeline.ts
projects/arc-search/src/content/: Palette.tsx  ResultRow.tsx  main.ts  main.tsx  palette.css
projects/arc-search/src/popup/: App.tsx  main.ts  main.tsx  popup.css
projects/arc-search/src/shared/: merge-results.test.ts  merge-results.ts  messages.ts  open-target.test.ts  open-target.ts  settings.ts  types.ts
projects/launcher/: launcher.py  pyproject.toml
scripts/: copy.sh  launcher.sh  setup.sh
tools/: __init__.py  calendar.py  cf_cron.py  docs.py  edit.py  google_auth.py
tools/calendar/: __init__.py  api.py  cli.py  help.py
tools/cf_cron/: __init__.py  api.py  cli.py  help.py
tools/common/: __init__.py  google_auth.py
tools/docs/: __init__.py  api.py  cli.py  help.py
