[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tools"
version = "0.1.0"
description = "Various tools and MCPs for agent use."
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "mcp>=1.27.0",
    "typer>=0.12.0",
]

[project.scripts]
docs = "cli.docs:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "cli"]
